Added score cards  and made fixes
